Added 'normalised ground' feature set and some setup for more thorough testing-combinations.

--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -554,7 +554,7 @@
        "[9, 113, -12, 119]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -1120,19 +1120,18 @@
     "\n",
     "features_core = ['right-x', 'right-y', 'left-x' , 'left-y' ]\n",
     "features_norm = ['norm-rx', 'norm-ry', 'norm-lx', 'norm-ly']\n",
-    "feature_index = [(i, features_core[i]) for i in range(len(features_core))]\n",
-    "df_all_mean   = {}\n",
-    "df_all_std    = {}\n",
+    "feature_index = [(i, features_core  [i]) for i in range(len(features_core  ))]\n",
+    "ground_index  = [(i, features_ground[i]) for i in range(len(features_ground))]\n",
     "\n",
     "for i, feature in feature_index:\n",
-    "    df_all_mean[feature] = asl.df['speaker'].map(df_means[feature])\n",
-    "    df_all_std [feature] = asl.df['speaker'].map(df_std  [feature])\n",
-    "    asl.df[features_norm[i]] = (asl.df[feature] - df_all_mean[feature]) / df_all_std[feature]"
+    "    feature_mean = asl.df['speaker'].map(df_means[feature])\n",
+    "    feature_std  = asl.df['speaker'].map(df_std  [feature])\n",
+    "    asl.df[features_norm[i]] = (asl.df[feature] - feature_mean) / feature_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -1155,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -1173,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -1181,9 +1180,12 @@
    "source": [
     "# TODO add features of your own design, which may be a combination of the above or something else\n",
     "# Name these whatever you would like\n",
+    "features_custom = ['ngrnd-rx', 'ngrnd-ry', 'ngrnd-lx', 'ngrnd-ly']\n",
     "\n",
-    "# TODO define a list named 'features_custom' for building the training set\n",
-    "features_custom = []"
+    "for i, feature in ground_index:\n",
+    "    feature_mean = asl.df['speaker'].map(df_means[feature])\n",
+    "    feature_std  = asl.df['speaker'].map(df_std  [feature])\n",
+    "    asl.df[features_custom[i]] = (asl.df[feature] - feature_mean) / feature_std\n"
    ]
   },
   {
