Added some comments to the selector/recognizer code and discovered that my SLM is in fact worse than useless when operating off the guessed values, rather than the true values.

--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -3222,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -3234,50 +3234,50 @@
       "\n",
       "Now building SLM...\n",
       "\n",
-      "**** WER = 0.33707865168539325\n",
-      "Total correct: 118 out of 178\n",
+      "**** WER = 0.4887640449438202\n",
+      "Total correct: 91 out of 178\n",
       "Video  Recognized                                                    Correct\n",
       "=====================================================================================================\n",
-      "    2: JOHN *FUTURE HOMEWORK                                         JOHN WRITE HOMEWORK\n",
+      "    2: JOHN *FUTURE *ARRIVE                                          JOHN WRITE HOMEWORK\n",
       "    7: JOHN CAN GO CAN                                               JOHN CAN GO CAN\n",
       "   12: JOHN CAN GO CAN                                               JOHN CAN GO CAN\n",
-      "   21: JOHN *VIDEOTAPE WONT EAT *WHAT CAN EAT CHICKEN                JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   21: JOHN *VIDEOTAPE *NEW *TELL *CAR CAN *TELL *BROTHER            JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
       "   25: JOHN *TELL IX IX IX                                           JOHN LIKE IX IX IX\n",
       "   28: *IX *SEE IX IX IX                                             JOHN LIKE IX IX IX\n",
       "   30: *IX *SEE IX IX IX                                             JOHN LIKE IX IX IX\n",
-      "   36: *IX *SUE KNOW IX LIKE *CORN                                   MARY VEGETABLE KNOW IX LIKE CORN1\n",
-      "   40: JOHN IX *GIVE MARY LOVE                                       JOHN IX THINK MARY LOVE\n",
-      "   43: *IX *WHO BUY HOUSE                                            JOHN MUST BUY HOUSE\n",
-      "   50: *JOHN JOHN *GO CAR *FUTURE                                    FUTURE JOHN BUY CAR SHOULD\n",
-      "   54: JOHN *ARRIVE *FINISH BUY HOUSE                                JOHN SHOULD NOT BUY HOUSE\n",
-      "   57: JOHN *WHO VISIT MARY                                          JOHN DECIDE VISIT MARY\n",
-      "   67: *VISIT *IX NOT BUY HOUSE                                      JOHN FUTURE NOT BUY HOUSE\n",
-      "   71: JOHN *FINISH VISIT MARY                                       JOHN WILL VISIT MARY\n",
-      "   74: *VISIT *IX VISIT MARY                                         JOHN NOT VISIT MARY\n",
-      "   77: *VISIT BLAME MARY                                             ANN BLAME MARY\n",
-      "   84: *LOVE *BUY SOMETHING-ONE *POSS                                IX-1P FIND SOMETHING-ONE BOOK\n",
-      "   89: JOHN IX GIVE *IX IX NEW COAT                                  JOHN IX GIVE MAN IX NEW COAT\n",
-      "   90: JOHN GIVE IX SOMETHING-ONE WOMAN BOOK                         JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
-      "   92: JOHN GIVE IX SOMETHING-ONE WOMAN BOOK                         JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   36: *IX *SUE *IX IX *IX *JOHN                                     MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   40: JOHN IX *GIVE *WHO *IX                                        JOHN IX THINK MARY LOVE\n",
+      "   43: *WHO *SEE BUY HOUSE                                           JOHN MUST BUY HOUSE\n",
+      "   50: *JOHN JOHN BUY CAR *FUTURE                                    FUTURE JOHN BUY CAR SHOULD\n",
+      "   54: JOHN *ARRIVE NOT BUY HOUSE                                    JOHN SHOULD NOT BUY HOUSE\n",
+      "   57: JOHN *WHO *IX *WHO                                            JOHN DECIDE VISIT MARY\n",
+      "   67: JOHN *SEE *FINISH BUY HOUSE                                   JOHN FUTURE NOT BUY HOUSE\n",
+      "   71: JOHN *FINISH *IX *WHO                                         JOHN WILL VISIT MARY\n",
+      "   74: JOHN *VISIT *IX *WHO                                          JOHN NOT VISIT MARY\n",
+      "   77: *JOHN *LOVE *WHO                                              ANN BLAME MARY\n",
+      "   84: *LOVE *ARRIVE *GIVE1 *COAT                                    IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: JOHN IX GIVE *IX *BOY *WOMAN COAT                             JOHN IX GIVE MAN IX NEW COAT\n",
+      "   90: JOHN GIVE IX SOMETHING-ONE WOMAN *COAT                        JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: JOHN GIVE IX SOMETHING-ONE WOMAN *COAT                        JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
       "  100: POSS *ARRIVE CAR BREAK-DOWN                                   POSS NEW CAR BREAK-DOWN\n",
       "  105: JOHN *SEE                                                     JOHN LEG\n",
-      "  107: JOHN POSS *BROTHER *POSS *JOHN                                JOHN POSS FRIEND HAVE CANDY\n",
+      "  107: *WHO *YESTERDAY *BROTHER *VISIT *JOHN                         JOHN POSS FRIEND HAVE CANDY\n",
       "  108: WOMAN *LOVE                                                   WOMAN ARRIVE\n",
-      "  113: *HERE CAR BLUE SUE BUY                                        IX CAR BLUE SUE BUY\n",
+      "  113: IX CAR BLUE SUE BUY                                           IX CAR BLUE SUE BUY\n",
       "  119: *IX BUY IX CAR BLUE                                           SUE BUY IX CAR BLUE\n",
-      "  122: JOHN *GIVE1 BOOK                                              JOHN READ BOOK\n",
-      "  139: JOHN BUY *CAR YESTERDAY BOOK                                  JOHN BUY WHAT YESTERDAY BOOK\n",
-      "  142: JOHN BUY *CAR WHAT BOOK                                       JOHN BUY YESTERDAY WHAT BOOK\n",
-      "  158: *IX JOHN WHO                                                  LOVE JOHN WHO\n",
+      "  122: JOHN *GIVE1 *COAT                                             JOHN READ BOOK\n",
+      "  139: JOHN BUY *CAR *BLAME *COAT                                    JOHN BUY WHAT YESTERDAY BOOK\n",
+      "  142: JOHN BUY *CAR *CAN *COAT                                      JOHN BUY YESTERDAY WHAT BOOK\n",
+      "  158: *IX JOHN *SEE                                                 LOVE JOHN WHO\n",
       "  167: JOHN *LOVE *LIKE *IX *WHO                                     JOHN IX SAY LOVE MARY\n",
-      "  171: JOHN *IX BLAME                                                JOHN MARY BLAME\n",
-      "  174: *CAN *GIVE3 *GIVE *GIRL *WHAT                                 PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  171: JOHN *VISIT BLAME                                             JOHN MARY BLAME\n",
+      "  174: *CAN *GIVE3 GIVE1 *GIRL *WHAT                                 PEOPLE GROUP GIVE1 JANA TOY\n",
       "  181: JOHN *LOVE                                                    JOHN ARRIVE\n",
-      "  184: *NOT BOY GIVE TEACHER APPLE                                   ALL BOY GIVE TEACHER APPLE\n",
-      "  189: JOHN GIVE *IX BOX                                             JOHN GIVE GIRL BOX\n",
-      "  193: JOHN GIVE *IX BOX                                             JOHN GIVE GIRL BOX\n",
+      "  184: *WHAT BOY GIVE TEACHER APPLE                                  ALL BOY GIVE TEACHER APPLE\n",
+      "  189: JOHN GIVE *IX *SOMETHING-ONE                                  JOHN GIVE GIRL BOX\n",
+      "  193: JOHN GIVE *IX *SOMETHING-ONE                                  JOHN GIVE GIRL BOX\n",
       "  199: *TELL CHOCOLATE WHO                                           LIKE CHOCOLATE WHO\n",
-      "  201: JOHN *VISIT *WHO *LOVE BUY HOUSE                              JOHN TELL MARY IX-1P BUY HOUSE\n"
+      "  201: JOHN *VISIT *GO *LOVE BUY HOUSE                               JOHN TELL MARY IX-1P BUY HOUSE\n"
      ]
     }
    ],
@@ -3297,7 +3297,7 @@
     "\n",
     "test_words     = test_set.wordlist\n",
     "test_SLM       = BasicSLM(\"SLM_data/corpus_sentences.txt\", verbose = False)\n",
-    "test_SLM_probs = get_SLM_probs(test_words, old_probs, test_SLM)\n",
+    "test_SLM_probs = get_SLM_probs(old_guesses, old_probs, test_SLM)\n",
     "\n",
     "new_probs, new_guesses = normalise_and_combine(test_words, old_probs, test_SLM_probs, old_guesses, 1)\n",
     "show_errors(new_guesses, test_set)\n"
